# mimo-sentinel

./: LICENSE  README.md  SUBMISSION.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  demo-report.md
src/mimo_sentinel/: __init__.py  analyzer.py  cli.py  mimo_client.py  models.py  parser.py  prompt.py  report.py  risk.py  validator.py
tests/: test_analyzer.py  test_parser.py  test_prompt_validator.py
