[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimo-sentinel"
version = "0.1.0"
description = "Autonomous AI incident commander powered by Xiaomi MiMo"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MiMo Sentinel Contributors" }]
dependencies = ["pydantic>=2.6", "httpx>=0.27", "typer>=0.12", "rich>=13.7"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mimo-sentinel = "mimo_sentinel.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
